it is what it is

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 	<form action="modif.html" method="post">
 		<input type="submit" name=submit value="OK">
 	</form>
+	</fieldset>
+	<fieldset><legend>Modify baskets (admin only)</legend>
+		<form action="basket.php" method="post">
+			<input type="submit" name=submit value="OK">
+		</form>
 	</div>
 </body>
 </html>
